Início da estilização com CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro site</title>
+    <link rel="stylesheet" href="assets/styles/index.css">
 </head>
 <body>
-    Juliaaa
+    <header>
+
+        <h2>Julia Erlo</h2>
+        <p>Estudante Desenvolvimento de Sistemas SENAI Valinhos</p>
+        
+    </header>
 </body>
 </html>
