Finish about section

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
         <p>Estudante Desenvolvimento de Sistemas SENAI Valinhos</p>
         
     </header>
+
+    <main>
+        <about-section>
+            <h3 id="titulo-sobre-mim">Sobre mim</h3>
+            <p class="texto-sobre-mim">Sou a Julia, tenho 16 anos, moro em Valinhos e estou cursando Sesi/SENAI.</p>
+            <p class="texto-sobre-mim">🌸DS é o melhor curso!</p>
+        </about-section>
+    </main>
 </body>
 </html>
