Finish hobbies section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
     <main>
         <about-section>
             <h3 id="titulo-sobre-mim">Sobre mim</h3>
-            <p class="texto-sobre-mim">Sou a Julia, tenho 16 anos, moro em Valinhos e estou cursando Sesi/SENAI.</p>
+            <p class="texto-sobre-mim">Sou a Julia, tenho 16 anos, moro em Valinhos e estou cursando Sesi/SENAI. Estou aprendendo a mexer com HTML e CSS.</p>
             <p class="texto-sobre-mim">🌸DS é o melhor curso!</p>
         </about-section>
+
+        <hobbies>
+            <h3 id="titulo-hobbies">Meus Hobbies</h3>
+            <ul>
+                <li>💌 Ler</li>
+                <li>🩰 Jogar vôlei</li>
+                <li>🧁 Academia</li>
+                <li>🫧 Assistir filmes</li>
+            </ul>
+        </hobbies>
     </main>
 </body>
 </html>
