Finish contact section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <about-section>
             <h3 id="titulo-sobre-mim">Sobre mim</h3>
-            <p class="texto-sobre-mim">Sou a Julia, tenho 16 anos, moro em Valinhos e estou cursando Sesi/SENAI. Estou aprendendo a mexer com HTML e CSS.</p>
+            <p class="texto-sobre-mim">Oi! Sou a Júlia, tenho 16 anos, moro em Valinhos e atualmente estou estudando no Sesi/SENAI. Estou começando a aprender sobre HTML e CSS, e estou adorando explorar esse mundo da programação!</p>
             <p class="texto-sobre-mim">🌸DS é o melhor curso!</p>
         </about-section>
 
@@ -30,6 +30,14 @@
                 <li>🫧 Assistir filmes</li>
             </ul>
         </hobbies>
+
+        <contact>
+            <h3>Entre em contato</h3>
+            <p>Quer ver meus projetos ou falar comigo? É só me procurar no
+            <a href="https://github.com/juliaefmiranda" target="_blank">GitHub</a> ou no 
+            <a href="https://www.linkedin.com/in/julia-miranda-7278a2349/" target="_blank">LinkedIn</a>    
+            </p>
+        </contact>
     </main>
 </body>
 </html>
