--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
             </p>
         </contact>
     </main>
+
+    <footer>
+        <p>2025 Julia Erlo - Minha primeira página!</p>
+    </footer>
 </body>
 </html>
