Criação da responsividade

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <main>
+        
         <about-section>
             <h3 id="titulo-sobre-mim">Sobre mim</h3>
             <p class="texto-sobre-mim">Oi! Sou a Júlia, tenho 16 anos, moro em Valinhos e atualmente estou estudando no Sesi/SENAI. Estou começando a aprender sobre HTML e CSS, e estou adorando explorar esse mundo da programação!</p>
@@ -42,6 +43,8 @@
 
     <footer>
         <p>2025 Julia Erlo - Minha primeira página!</p>
+        <a href="pages/testes.html">Ir para a página de Testes ✏️</a>
     </footer>
 </body>
-</html>
+</html> 
+
