--- a/pages/testes.html
+++ b/pages/testes.html
@@ -7,5 +7,17 @@
     </head>
     <body>
         <h1>Minha página de Testes Aleatórios</h1>
+
+        <a href="../index.html">Ir para a página Home 🏠</a>
+
+        <img src="https://github.com/juliaefmiranda.png" alt="Imagem abstrata composta por dois blocos verdes claros que formam a letra 'H'. O fundo é de cor neutra, clara, proporcionando contraste com os blocos."/>
+        <img src="../assets/images/image.png" alt="Imagem abstrata composta por dois blocos verdes claros que formam a letra 'H'. O fundo é de cor neutra, clara, proporcionando contraste com os blocos."/>
+
+        <h2>List Times do Brasil</h2>
+
+        <ol>
+            <li>Corinthians</li>
+            <li>Paysandu</li>
+        </ol>
     </body>
 </html>
